@@ -35,7 +35,7 @@ enum Spells
     SPELL_DEFILING_HORROR               = 72435,
     H_SPELL_DEFILING_HORROR             = 72452,
     SPELL_HOPELESSNESS                  = 72395,
-    H_SPELL_HOPELESSNESS                = 72390, // TODO: not in dbc. Add in DB.
+    H_SPELL_HOPELESSNESS                = 72390, /// @todo not in dbc. Add in DB.
 };
 
 enum Events
@@ -100,7 +100,7 @@ public:
 
             events.ScheduleEvent(EVENT_QUIVERING_STRIKE, 23000);
             events.ScheduleEvent(EVENT_IMPENDING_DESPAIR, 9000);
-            events.ScheduleEvent(EVENT_DEFILING_HORROR, urand(25000, 45000)); /// @todo adjust timer.
+            events.ScheduleEvent(EVENT_DEFILING_HORROR, urand(20000, 30000)); // TODO adjust timer.
         }
 
         void JustDied(Unit* /*killer*/)
@@ -144,7 +144,7 @@ public:
                 case EVENT_DEFILING_HORROR:
                     DoDefilingHorror();
                     Talk(SAY_DEFILING_HORROR);
-                    events.ScheduleEvent(EVENT_DEFILING_HORROR, urand(25000, 45000)); /// @todo adjust timer.
+                    events.ScheduleEvent(EVENT_DEFILING_HORROR, urand(20000, 35000)); // TODO adjust timer.
                     break;
             }
 
